# validator-launcher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
ansible/: README.md  install-playbook.yml  install-updater.sh  playbook.yml
ansible/templates/: validator-launcher.service.j2
scripts/: start-dstack-services.sh  stop-dstack-services.sh
src/: config_tui.rs  main.rs
