[package]
name = "validator-auto-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

